# fullstack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/fullstack/: __init__.py  cli.py
src/fullstack/templates/: .env.example  .env.example.tpl  .gitignore  .pre-commit-config.yaml  CLAUDE.md.tpl  pyproject.toml.tpl  start.sh.tpl
src/fullstack/templates/_variants/postgres/src/__package__/: database.py.tpl
src/fullstack/templates/_variants/postgres/tests/: conftest.py.tpl
src/fullstack/templates/_variants/sqlite/src/__package__/: database.py.tpl
src/fullstack/templates/_variants/sqlite/tests/: conftest.py.tpl
src/fullstack/templates/frontend/: index.html.tpl  package.json.tpl  vite.config.ts
src/fullstack/templates/frontend/src/: App.tsx.tpl  api.ts.tpl  main.tsx.tpl  theme.ts  types.ts.tpl  utils.ts
src/fullstack/templates/frontend/src/__tests__/: utils.test.ts
src/fullstack/templates/frontend/src/components/: Layout.tsx.tpl  ProtectedRoute.tsx  Sidebar.tsx.tpl
src/fullstack/templates/frontend/src/contexts/: AuthContext.tsx.tpl  ThemeContext.tsx.tpl
src/fullstack/templates/frontend/src/pages/: Dashboard.tsx.tpl  Login.tsx.tpl  Settings.tsx.tpl
src/fullstack/templates/planning/templates/: feature.md
src/fullstack/templates/src/__package__/: __init__.py.tpl  auth.py.tpl  database.py.tpl  main.py.tpl  models.py.tpl
src/fullstack/templates/src/__package__/routes/: auth_routes.py.tpl  note_routes.py.tpl
src/fullstack/templates/tests/: conftest.py.tpl  test_auth.py.tpl  test_smoke.py.tpl
