[project]
name = "fullstack"
version = "0.1.0"
description = "AI-native full-stack starter kit — Python + FastAPI + React + MUI"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fullstack = "fullstack.cli:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
build_command = "uv build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fullstack"]

[tool.hatch.build]
include = [
    "src/fullstack/**",
]
